force-app/main/default/objects/MUSW__Milestone_Template__c/MUSW__Milestone_Template__c.object-meta.xml
<CustomObject>
    <label>Milestone Template</label>
    <nameField>
        <label>Milestone Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>