force-app/main/default/objects/MUSW__Milestone_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( AND(Effective_Start_Date__c&lt;TODAY(),
       (OR(ISBLANK(Effective_End_Date__c),
	       Effective_End_Date__c&gt; TODAY())
		) 
		),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>