force-app/main/default/objects/MUSW__Milestone_Template__c/fields/MUSW__Active__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>