force-app/main/default/objects/MUSW__Milestone_Template__c/fields/MUSW__Application_Statuses__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application_Statuses__c</fullName>
    <label>Application Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Application_Statuses</valueSetName>
    </valueSet>
</CustomField>