force-app/main/default/objects/MUSW__Milestone_Template__c/fields/MUSW__Due_in_Days__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Due_in_Days__c</fullName>
    <label>Due in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>