force-app/main/default/objects/MUSW__Milestone_Template__c/fields/MUSW__Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Review</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Plan Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>