force-app/main/default/objects/MUSW__Milestone_Template__c/fields/MUSW__Milestone_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Milestone_Record_Type__c</fullName>
    <label>Milestone Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Review Milestone</fullName>
            </value>
            <value>
                <fullName>Plan Review Milestone</fullName>
            </value>
            <value>
                <fullName>Inspection Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>