force-app/main/default/objects/MUSW__Milestone_Template__c/recordTypes/MUSW__Application_Milestone.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Application_Milestone</fullName>
    <active>true</active>
    <label>Application Milestone</label>
</RecordType>