force-app/main/default/objects/MUSW__Milestone_Template__c/recordTypes/MUSW__License_Milestone.recordType-meta.xml
<RecordType>
    <fullName>MUSW__License_Milestone</fullName>
    <active>true</active>
    <label>License Milestone</label>
</RecordType>