force-app/main/default/objects/MUSW__Milestone_Template__c/recordTypes/MUSW__Permit_Milestone.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Permit_Milestone</fullName>
    <active>true</active>
    <label>Permit Milestone</label>
</RecordType>