force-app/main/default/objects/MUSW__Milestone_Template__c/recordTypes/MUSW__Project_Milestone.recordType-meta.xml
<RecordType>
    <fullName>MUSW__Project_Milestone</fullName>
    <active>true</active>
    <label>Project Milestone</label>
</RecordType>